--- a/assets/ui/resources/resources_rc.qrc
+++ b/assets/ui/resources/resources_rc.qrc
@@ -10,5 +10,6 @@
   <qresource prefix="uiPrefix">
     <file>../form.ui</file>
     <file>../settings.ui</file>
+    <file>../downloader.ui</file>
   </qresource>
 </RCC>
