--- a/assets/ui/settings.ui
+++ b/assets/ui/settings.ui
@@ -28,6 +28,11 @@
     <height>176</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <family>Verdana</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
@@ -72,7 +77,7 @@
     <item row="0" column="0">
      <widget class="QPushButton" name="pushButtonOMP">
       <property name="text">
-       <string>open-mp-client.exe</string>
+       <string>omp-launcher.exe</string>
       </property>
      </widget>
     </item>
